# sipet

./: .env  .env.example  .gitignore  Catálogo.csv  Procfile  alembic.ini  deploy-sipet.sh  docker-compose.yml  empleados_notebook.ipynb  estructura.txt  gastos  main.py  package-lock.json  package.json  plantilla_importacion_presupuesto.csv  presupuesto.txt  pyproject.toml  railway.json  reiniciar.sh  requirements.txt  separar presupuesto.md  ssh-copy-id administrator@38.247.146.242  ssh-copy-id administrator@38.247.146.242.pub  tailwind.config.js  test.html
alembic/: env.py
alembic/versions/: 428edd7ec8a9_initial_migration.py  927131a4a55d_add_auth_tables.py  xxx_add_permission_tables.py
alerts/: alert_system.py
exports/: template_error_404.html
fastapi_modulo/: GUIA_ESTRUCTURA_BACKEND.md  colores.db  datos_preliminares_store.json  db.py  login_identity_constants.py  login_utils.py  main.py  membresia.html  membresia.py  membresia_nueva.html  personalizacion.py  regiones_store.json  sucursales_store.json
fastapi_modulo/modulos/diagnostico/: diagnostico.py
fastapi_modulo/modulos/empleados/: departamentos.html  departamentos.js  departamentos.py  empleados.py  regiones.py
fastapi_modulo/templates/: base.html  no_acceso.html  not_found.html  sipet-funcionalidades.css  web_login.html
reportes/: reportes.html  reportes.py
reporting/: advanced_reporting_system.py
static/css/: global.css  proyectando.css
static/js/: bsc_dashboard_analytics.js
strategic_planning/frontend/: strategic_entry.html
templates/: base.html  index.html  not_found.html  test.html
(+118 files in other folders)
